<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SecondScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/second_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:elevation="2dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/second_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/second_activity_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"/>
            
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    
    <LinearLayout
        android:id="@+id/second_content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/second_btn_container"
        app:layout_constraintTop_toBottomOf="@id/second_appbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_greetings_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/second_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_placeholder_name_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/second_tv_selected_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/second_selected_user_text"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/second_btn"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/et_border"
            android:backgroundTint="@color/btn_color"
            android:text="@string/second_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>